Float non compliant example